# licenseguard

./: .codebase_learnings.json  .gitignore  .linear_project.json  README.md  app_spec.txt  init.sh  pyproject.toml
licenseguard/: __init__.py  cli.py  models.py  policy.py  reporter.py  scanner.py
tests/: __init__.py  test_policy.py  test_reporter.py  test_scanner.py
